5-mariadb-dev.sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      name: mariadb
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: "mariadb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
        - name: mariadb
          image: mariadb:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-data
              mountPath: /bitnami/mariadb
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
